SEM2/COD7001/LABS/LAB6/cstn6/src/automated_tests/stress_tests/invalid/fail_79.lang
var x = 79 
 var y = 2;